update final project
