# FP-BDS-Sanbercode-Go-52-jobvacancy/docs/swagger.json
@@ -4,69 +4,69 @@
         "contact": {}
     },
     "paths": {
-        "/all_apply": {
+        "/applyjob": {
             "get": {
-                "description": "Display all applied data",
+                "description": "menampilkan semuda data list apply job",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "ApplyJob"
                 ],
-                "summary": "Get All Apply Job",
+                "summary": "Get List Apply Job",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Apply"
+                                "$ref": "#/definitions/models.ApplyJob"
                             }
                         }
                     }
                 }
             }
         },
-        "/apply_job/:id": {
+        "/applyjob/:id_jobvacancy": {
             "post": {
-                "description": "Post apply job",
+                "description": "melakukan apply job",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "ApplyJob"
                 ],
-                "summary": "Post Apply Job",
+                "summary": "Apply Job Handler",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Apply"
+                                "$ref": "#/definitions/models.ApplyJob"
                             }
                         }
                     }
                 }
             }
         },
-        "/apply_job/:id_apply": {
-            "delete": {
-                "description": "Delete a job",
+        "/applyjob/:id_jobvacancy/:id_apply": {
+            "put": {
+                "description": "update status pending to applied or rejected",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "ApplyJob"
                 ],
-                "summary": "Delete Job Apply",
+                "summary": "Confirm Status Apply Job",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Apply"
+                                "$ref": "#/definitions/models.ApplyJob"
                             }
                         }
                     }
@@ -75,7 +75,7 @@
         },
         "/change-password": {
             "post": {
-                "description": "Change password by id and role user",
+                "description": "Role admin bisa mengganti password semua user, role job seeker by id",
                 "produces": [
                     "application/json"
                 ],
@@ -89,7 +89,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Users"
+                                "$ref": "#/definitions/models.User"
                             }
                         }
                     }
@@ -98,7 +98,7 @@
         },
         "/job-vacancy": {
             "get": {
-                "description": "Get a list of all job vacancies",
+                "description": "Menampilkan semua list job vacancy",
                 "produces": [
                     "application/json"
                 ],
@@ -126,7 +126,7 @@
                 "tags": [
                     "Job Vacancy"
                 ],
-                "summary": "Create job vacancies",
+                "summary": "Create job vacancy",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -207,7 +207,7 @@
         },
         "/login": {
             "post": {
-                "description": "Login with JWT",
+                "description": "Login akun dengan auth JWT",
                 "produces": [
                     "application/json"
                 ],
@@ -221,7 +221,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Users"
+                                "$ref": "#/definitions/models.User"
                             }
                         }
                     }
@@ -230,7 +230,7 @@
         },
         "/register": {
             "post": {
-                "description": "Register Accout",
+                "description": "Regisrasi akun dengan role admin dan jobseeker",
                 "produces": [
                     "application/json"
                 ],
@@ -244,7 +244,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Users"
+                                "$ref": "#/definitions/models.User"
                             }
                         }
                     }
@@ -253,50 +253,42 @@
         }
     },
     "definitions": {
-        "models.Apply": {
+        "models.ApplyJob": {
             "type": "object",
             "properties": {
-                "company_desc": {
+                "created_at": {
                     "type": "string"
                 },
-                "company_name": {
-                    "type": "string"
-                },
-                "company_salary": {
-                    "type": "integer"
-                },
-                "company_status": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
+                "delete_at": {
+                    "type": "string",
+                    "format": "date-time"
                 },
                 "id_apply": {
-                    "type": "integer"
-                },
-                "id_user": {
                     "type": "integer"
                 },
                 "job_id": {
                     "type": "integer"
                 },
-                "job_title": {
+                "status": {
                     "type": "string"
                 },
-                "status_lamaran": {
+                "updated_at": {
                     "type": "string"
                 },
                 "user_id": {
                     "type": "integer"
-                },
-                "username": {
-                    "type": "string"
                 }
             }
         },
         "models.Jobvacancy": {
             "type": "object",
             "properties": {
+                "applyjob": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.ApplyJob"
+                    }
+                },
                 "company_desc": {
                     "type": "string"
                 },
@@ -304,22 +296,45 @@
                     "type": "string"
                 },
                 "company_salary": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "company_status": {
+                    "type": "integer"
+                },
+                "created_at": {
                     "type": "string"
                 },
-                "id": {
+                "delete_at": {
+                    "type": "string",
+                    "format": "date-time"
+                },
+                "id_jobvacancy": {
                     "type": "integer"
                 },
                 "title": {
                     "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
                 }
             }
         },
-        "models.Users": {
+        "models.User": {
             "type": "object",
             "properties": {
+                "applyjobs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.ApplyJob"
+                    }
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "delete_at": {
+                    "type": "string",
+                    "format": "date-time"
+                },
                 "email": {
                     "type": "string"
                 },
@@ -330,6 +345,9 @@
                     "type": "string"
                 },
                 "role": {
+                    "type": "string"
+                },
+                "updated_at": {
                     "type": "string"
                 },
                 "username": {
