# FP-BDS-Sanbercode-Go-52-jobvacancy/models/applystatus.go
@@ -1,6 +1,0 @@
-package models
-
-type ApplyStatus struct {
-	ID_APPLY string `json:"id_appl"`
-	Status   string `json:"status_lamaran"`
-}
