# FP-BDS-Sanbercode-Go-52-jobvacancy/models/request/register_req.go
@@ -1,0 +1,8 @@
+package request
+
+type RegisterRequest struct {
+	Email    string `json:"email" form:"email"`
+	Password string `json:"password" form:"password"`
+	Username string `json:"username" form:"username"`
+	Role     string `json:"role" form:"role"`
+}
