# FP-BDS-Sanbercode-Go-52-jobvacancy/models/users.go
@@ -1,9 +1,0 @@
-package models
-
-type Users struct {
-	Id_User  int    `json:"id_user"`
-	Email    string `form:"email" `
-	Password string `form:"password"`
-	Username string `form:"username"`
-	Role     string `form:"role"`
-}
